Post-v20.03.0
--------------------------
   - Added support for external_port_range in NAT table.


OVN v20.03.0 - xx xxx xxxx
--------------------------
   - OVN was split out from the OVS repository and is now released
     independently.
   - Added IPv6 NAT support for OVN routers.
   - Added Stateless Floating IP support in OVN.
   - Added Forwarding Group support in OVN.
   - Added support for MLD Snooping and MLD Querier.
   - Added support for ECMP routes in OVN router.
   - Added IPv6 Prefix Delegation support in OVN.
   - OVN now uses OpenFlow 1.5.
   - Added support to choose selection methods - dp_hash or
     hash (with specified hash fields) for OVN load balancer
     backend selection. This is incompatible with older versions.
     Care should be taken while upgrading as the existing
     load balancer traffic will be affected if ovn-controllers
     are not stopped before uprading northd services.
   - Added limited support for logical switches with multiple localnet ports.
     The feature requires that no chassis has two or more physical networks
     with localnet ports that belong to the same logical switch mapped. Routing
     between the ports to be implemented by fabric.

   - OVN Interconnection:
     * Support for L3 interconnection of multiple OVN deployments with tunnels
       managed by OVN.  See instructions in
       Documentation/tutorials/ovn-interconnection.rst.

v2.12.0 - 03 Sep 2019
---------------------
   - DPDK:
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.
     * Add support for vHost Post-copy Live Migration (experimental).
     * OVS validated with DPDK 18.11.2 which is the new minimal supported
       version.
     * DPDK 18.11.1 and lower is no longer supported.
     * New option 'tx-retries-max' to set the maximum amount of vhost tx
       retries that can be made.
   - OpenFlow:
     * All features required by OpenFlow 1.5 are now implemented, so