@@ -149,3 +149,7 @@ OVN To-do List
 * OVN Interconnection
 
   * Packaging for RHEL, Debian, etc.
+
+* ovn-controller: Stop copying the local OVS configuration into the
+  Chassis external_ids column (same for the "is-remote" configuration from
+  ovn-ic) a few releases after the 20.06 version (21.06 maybe ?).
