@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
-    "version": "2.7.0",
-    "cksum": "4286723485 21693",
+    "version": "2.8.0",
+    "cksum": "1643994484 21853",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -36,6 +36,9 @@
                                                     "max": "unlimited"}},
                 "nb_cfg": {"type": {"key": "integer"}},
                 "external_ids": {
+                    "type": {"key": "string", "value": "string",
+                             "min": 0, "max": "unlimited"}},
+                "other_config": {
                     "type": {"key": "string", "value": "string",
                              "min": 0, "max": "unlimited"}},
                 "transport_zones" : {"type": {"key": "string",
