@@ -90,6 +90,12 @@ Chassis gw1
         ip: "192.168.0.1"
 ])
 
+AT_CHECK([ovn_as az2 ovn-sbctl -f csv -d bare --no-headings --columns other_config list chassis], [0], [dnl
+is-remote=true
+])
+
+# TODO(lucasagomes): Remove this check when we get rid of the behavior
+# of writting configuration to the Chassis external_ids column.
 AT_CHECK([ovn_as az2 ovn-sbctl -f csv -d bare --no-headings --columns external_ids list chassis], [0], [dnl
 is-remote=true
 ])
